--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,14 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
+---
+# liquid:
+#   error_mode: strict
+#   strict_filters: true
 
-#liquid:
-#  error_mode: strict
-#  strict_filters: true
+destination: ../gh-pages
 
-title: blank # the website title (if blank, full name will be used instead)
+title: blank  # the website title (if blank, full name will be used instead)
 
 first_name: Blake
 middle_name: A.
@@ -20,28 +22,28 @@ footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: algebraic geometry, noncommutative algebraic geometry, derived categories, dg-categories, derived Morita theory, noncommutative projective schemes, homological algebra, Lean theorem prover, mathlib, formalized mathematics
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: bulldog.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+lang: en   # the language of your site (for example: en, fr, cn, ru, etc.)
+icon: bulldog.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 # url: https://farmanb.github.io # the base hostname & protocol for your site
 url: https://www.blakefarman.phd
-baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
-last_updated: true # set to true if you want to display last updated in the footer
+baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
+last_updated: true  # set to true if you want to display last updated in the footer
 
-impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
-back_to_top: true # set to false to disable the back to top button
+impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
+back_to_top: true  # set to false to disable the back to top button
 
 # -----------------------------------------------------------------------------
 # Theme
 # -----------------------------------------------------------------------------
 
 # repo color theme
-repo_theme_light: default # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
-repo_theme_dark: dark # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
+repo_theme_light: default  # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
+repo_theme_dark: dark  # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
 repo_trophies:
   enabled: false
-  theme_light: flat # https://github.com/ryo-ma/github-profile-trophy
-  theme_dark: gitdimmed # https://github.com/ryo-ma/github-profile-trophy
+  theme_light: flat  # https://github.com/ryo-ma/github-profile-trophy
+  theme_dark: gitdimmed  # https://github.com/ryo-ma/github-profile-trophy
 
 # -----------------------------------------------------------------------------
 # RSS Feed
@@ -70,9 +72,9 @@ max_width: 930px
 # -----------------------------------------------------------------------------
 # Display links to the page with a preview object on social media.
 # see https://schema.org/docs/faq.html for more information
-serve_og_meta: false # Include Open Graph meta tags in the HTML head
-serve_schema_org: false # Include Schema.org in the HTML head
-og_image: # The site-wide (default for all links) Open Graph preview image
+serve_og_meta: false  # Include Open Graph meta tags in the HTML head
+serve_schema_org: false  # Include Schema.org in the HTML head
+og_image:  # The site-wide (default for all links) Open Graph preview image
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -81,24 +83,24 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # For Google Analytics, see https://support.google.com/analytics/answer/10447272?hl=en&ref_topic=14088998&sjid=5129943941510317771-SA#zippy=%2Cgoogle-sites
 # and follow the instructions for Google Sites. You will need to create a Google Analytics property and copy the Google tag ID.
 # google_analytics: G-N9B29TBC38 # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
-google_analytics: G-R8E7DGJ7FV # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
-cronitor_analytics: # cronitor RUM analytics site ID (format: XXXXXXXXX)
-pirsch_analytics: # your Pirsch analytics site ID (length 32 characters)
-openpanel_analytics: # your Openpanel analytics client ID (format: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX)
+google_analytics: G-R8E7DGJ7FV  # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
+cronitor_analytics:  # cronitor RUM analytics site ID (format: XXXXXXXXX)
+pirsch_analytics:  # your Pirsch analytics site ID (length 32 characters)
+openpanel_analytics:  # your Openpanel analytics client ID (format: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX)
 
 # For Google Search Console, see https://support.google.com/webmasters/answer/9008080?hl=en#meta_tag_verification&zippy=%2Chtml-tag
-google_site_verification: owUViBqHBtXqmRNA9j8L4Y223yh8WSH6FHlyaADcpzI # your google-site-verification ID (Google Search Console)
-bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
+google_site_verification: owUViBqHBtXqmRNA9j8L4Y223yh8WSH6FHlyaADcpzI  # your google-site-verification ID (Google Search Console)
+bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: # blog_name will be displayed in your blog page
-blog_description: #
-permalink: # /blog/:year/:title/
+blog_name:  # blog_name will be displayed in your blog page
+blog_description:  #
+permalink:  # /blog/:year/:title/
 
-lsi: false # produce an index for related posts
+lsi: false  # produce an index for related posts
 
 # Pagination
 pagination:
@@ -111,22 +113,22 @@ related_blog_posts:
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out the information below.
 
-#giscus:
-#  repo: # <your-github-user-name>/<your-github-repo-name>
-#  repo_id: # leave empty or specify your repo_id (see https://giscus.app/)
-#  category: Comments # name of the category under which discussions will be created
-#  category_id: # leave empty or specify your category_id (see https://giscus.app/)
-#  mapping: title # identify discussions by post title
-#  strict: 1 # use strict identification mode
-#  reactions_enabled: 1 # enable (1) or disable (0) emoji reactions
-#  input_position: bottom # whether to display input form below (bottom) or above (top) the comments
-#  dark_theme: dark # name of the dark color scheme (preferred works well with al-folio dark mode)
-#  light_theme: light # name of the light color scheme (preferred works well with al-folio light mode)
-#  emit_metadata: 0
-#  lang: en
+# giscus:
+#   repo:  # <your-github-user-name>/<your-github-repo-name>
+#   repo_id:  # leave empty or specify your repo_id (see https://giscus.app/)
+#   category: Comments  # name of the category under which discussions will be created
+#   category_id:  # leave empty or specify your category_id (see https://giscus.app/)
+#   mapping: title  # identify discussions by post title
+#   strict: 1  # use strict identification mode
+#   reactions_enabled: 1  # enable (1) or disable (0) emoji reactions
+#   input_position: bottom  # whether to display input form below (bottom) or above (top) the comments
+#   dark_theme: dark  # name of the dark color scheme (preferred works well with al-folio dark mode)
+#   light_theme: light  # name of the light color scheme (preferred works well with al-folio light mode)
+#   emit_metadata: 0
+#   lang: en
 
 # Disqus comments (DEPRECATED)
-# disqus_shortname: al-folio # put your disqus shortname
+# disqus_shortname: al-folio  # put your disqus shortname
 # https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # External sources.
@@ -146,7 +148,7 @@ external_sources:
 
 newsletter:
   enabled: false
-  endpoint: # your loops endpoint (e.g., https://app.loops.so/api/newsletter-form/YOUR-ENDPOINT)
+  endpoint:  # your loops endpoint (e.g., https://app.loops.so/api/newsletter-form/YOUR-ENDPOINT)
   # https://loops.so/docs/forms/custom-form
 
 # -----------------------------------------------------------------------------
@@ -176,13 +178,13 @@ collections:
 
 announcements:
   enabled: true
-  scrollable: true # adds a vertical scroll bar if there are more than 3 news items
-  limit: 5 # leave blank to include all the news in the `_news` folder
+  scrollable: true  # adds a vertical scroll bar if there are more than 3 news items
+  limit: 5  # leave blank to include all the news in the `_news` folder
 
 latest_posts:
   enabled: false
-  scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
-  limit: 3 # leave blank to include all the blog posts
+  scrollable: true  # adds a vertical scroll bar if there are more than 3 new posts items
+  limit: 3  # leave blank to include all the blog posts
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
@@ -274,7 +276,7 @@ sass:
 # -----------------------------------------------------------------------------
 
 jekyll-minifier:
-  compress_javascript: false # set to false since we are using terser as the js minifier
+  compress_javascript: false  # set to false since we are using terser as the js minifier
   exclude: ["robots.txt", "assets/js/search/*.js"]
 
 # -----------------------------------------------------------------------------
@@ -291,16 +293,16 @@ terser:
 
 jekyll-archives:
   posts:
-    enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
+    enabled: [year, tags, categories]  # enables year, tag and category archives (remove if you need to disable one of them).
     permalinks:
       year: "/blog/:year/"
       tags: "/blog/:type/:name/"
       categories: "/blog/:type/:name/"
   books:
-    enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
+    enabled: [year, tags, categories]  # enables year, tag and category archives (remove if you need to disable one of them).
 
-display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"]  # these tags will be displayed on the front page of your blog
+display_categories: ["external-services"]  # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
@@ -334,10 +336,10 @@ scholar:
 # Display different badges withs stats for your publications
 # Customize badge behavior in _layouts/bib.liquid
 enable_publication_badges:
-  altmetric: true # Altmetric badge (Customization options: https://badge-docs.altmetric.com/index.html)
-  dimensions: true # Dimensions badge (Customization options: https://badge.dimensions.ai/)
-  google_scholar: true # Google Scholar badge (https://scholar.google.com/intl/en/scholar/citations.html)
-  inspirehep: true # Inspire HEP badge (https://help.inspirehep.net/knowledge-base/citation-metrics/)
+  altmetric: true  # Altmetric badge (Customization options: https://badge-docs.altmetric.com/index.html)
+  dimensions: true  # Dimensions badge (Customization options: https://badge.dimensions.ai/)
+  google_scholar: true  # Google Scholar badge (https://scholar.google.com/intl/en/scholar/citations.html)
+  inspirehep: true  # Inspire HEP badge (https://help.inspirehep.net/knowledge-base/citation-metrics/)
 
 # Filter out certain bibtex entry keywords used internally from the bib output
 filtered_bibtex_keywords:
@@ -367,8 +369,8 @@ filtered_bibtex_keywords:
   ]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
-max_author_limit: 3 # leave blank to always show all authors
-more_authors_animation_delay: 10 # more authors are revealed on click using animation; smaller delay means faster animation
+max_author_limit: 3  # leave blank to always show all authors
+more_authors_animation_delay: 10  # more authors are revealed on click using animation; smaller delay means faster animation
 
 # Enables publication thumbnails. If disabled, none of the publications will display thumbnails, even if specified in the bib entry.
 enable_publication_thumbnails: true
@@ -391,7 +393,7 @@ external_links:
 # MAKE SURE imagemagick is installed and on your PATH before enabling imagemagick. In a terminal, run:
 #   convert -version
 imagemagick:
-  enabled: true # enables responsive images for your site (recommended, see https://github.com/alshedivat/al-folio/issues/537)
+  enabled: true  # enables responsive images for your site (recommended, see https://github.com/alshedivat/al-folio/issues/537)
   widths:
     - 480
     - 800
@@ -413,28 +415,28 @@ imagemagick:
 #   You can also set loading="" to other values for specific images to override the default behavior.
 #   Options: "auto", "eager", "lazy"
 #   See https://web.dev/browser-level-image-lazy-loading/ for more information.
-lazy_loading_images: true # enables lazy loading of images (recommended)
+lazy_loading_images: true  # enables lazy loading of images (recommended)
 
 # -----------------------------------------------------------------------------
 # Optional Features
 # -----------------------------------------------------------------------------
 
-enable_google_analytics: true # enables google analytics
-enable_google_tag_manager: true # enables google tag manager
-enable_cronitor_analytics: false # enables cronitor RUM analytics
-enable_pirsch_analytics: false # enables Pirsch analytics (https://pirsch.io/)
-enable_google_verification: true # enables google site verification
-enable_openpanel_analytics: false # enables Openpanel analytics (https://openpanel.dev/)
-enable_bing_verification: false # enables bing site verification
-enable_masonry: true # enables automatic project cards arrangement
-enable_math: true # enables math typesetting (uses MathJax)
-enable_tooltips: false # enables automatic tooltip links generated for each section titles on pages and posts
-enable_darkmode: true # enables switching between light/dark modes
-enable_navbar_social: false # enables displaying social links in the navbar on the about page
-enable_project_categories: true # enables categorization of projects into multiple categories
-enable_medium_zoom: true # enables image zoom feature (as on medium.com)
-enable_progressbar: true # enables a horizontal progress bar linked to the vertical scroll position
-enable_video_embedding: false # enables video embedding for bibtex entries. If false, the button opens the video link in a new window.
+enable_google_analytics: true  # enables google analytics
+enable_google_tag_manager: true  # enables google tag manager
+enable_cronitor_analytics: false  # enables cronitor RUM analytics
+enable_pirsch_analytics: false  # enables Pirsch analytics (https://pirsch.io/)
+enable_google_verification: true  # enables google site verification
+enable_openpanel_analytics: false  # enables Openpanel analytics (https://openpanel.dev/)
+enable_bing_verification: false  # enables bing site verification
+enable_masonry: true  # enables automatic project cards arrangement
+enable_math: true  # enables math typesetting (uses MathJax)
+enable_tooltips: false  # enables automatic tooltip links generated for each section titles on pages and posts
+enable_darkmode: true  # enables switching between light/dark modes
+enable_navbar_social: false  # enables displaying social links in the navbar on the about page
+enable_project_categories: true  # enables categorization of projects into multiple categories
+enable_medium_zoom: true  # enables image zoom feature (as on medium.com)
+enable_progressbar: true  # enables a horizontal progress bar linked to the vertical scroll position
+enable_video_embedding: false  # enables video embedding for bibtex entries. If false, the button opens the video link in a new window.
 
 # -----------------------------------------------------------------------------
 # Library versions
@@ -444,7 +446,7 @@ enable_video_embedding: false # enables video embedding for bibtex entries. If f
 # The integrity hash is used to ensure that the library is not tampered with.
 # Integrity hashes not provided by the libraries were generated using https://www.srihash.org/
 third_party_libraries:
-  download: false # if true, download the versions of the libraries specified below and use the downloaded files
+  download: false  # if true, download the versions of the libraries specified below and use the downloaded files
   bootstrap-table:
     integrity:
       css: "sha256-uRX+PiRTR4ysKFRCykT8HLuRCub26LgXJZym3Yeom1c="
@@ -671,7 +673,7 @@ third_party_libraries:
 
 jekyll_get_json:
   - data: resume
-    json: assets/json/resume.json # it can also be an url
+    json: assets/json/resume.json  # it can also be an url
 
 jsonresume:
   - basics
